--- a/ChinookMusic/WebApp/appsettings.json
+++ b/ChinookMusic/WebApp/appsettings.json
@@ -1,6 +1,11 @@
 {
+  //The connection string JSO element was created when the webApp was created with the security level of the individual accounts 
+  //The code to handle the security will be using a Db connection name of DefaultConnection 
+  //THEREFORE you WILL NOT remove this connection string 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebApp-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebApp-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ChinookDB": "Server=.\\SHANEPC;Database=\"Chinook;Trusted_Connection=TrueMultipleActiveResultSets=true"
+
   },
   "Logging": {
     "LogLevel": {
